[package]
name = "scx_debugfifo"
version = "1.0.0"
authors = ["Generated"]
edition = "2021"
description = "A simple FIFO scheduler that prints all available scx framework data"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1"
plain = "0.2"
procfs = "0.18"
ctrlc = { version = "3", features = ["termination"] }
libbpf-rs = "=0.26.1"
libc = "0.2"
scx_utils = { path = "../../../rust/scx_utils", version = "1.1.0" }
scx_rustland_core = { path = "../../../rust/scx_rustland_core", version = "2.4.11" }

[build-dependencies]
scx_cargo = { path = "../../../rust/scx_cargo", version = "1.1.0" }
scx_rustland_core = { path = "../../../rust/scx_rustland_core", version = "2.4.11" }

[features]
enable_backtrace = []
